--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,26 +1,26 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "quartermaster_app",
+    "password": "fl0ckBird",
+    "database": "quartermaster_development",
     "host": "127.0.0.1",
-    "dialect": "mysql",
+    "dialect": "postgresql",
     "operatorsAliases": false
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
+    "username": "quartermaster_app",
+    "password": "fl0ckBird",
+    "database": "quartermaster_test",
     "host": "127.0.0.1",
-    "dialect": "mysql",
+    "dialect": "postgresql",
     "operatorsAliases": false
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
+    "username": "quartermaster_app",
+    "password": "fl0ckBird",
+    "database": "quartermaster_production",
     "host": "127.0.0.1",
-    "dialect": "mysql",
+    "dialect": "postgresql",
     "operatorsAliases": false
   }
 }
